Fix another false-positive contrast error

--- a/src/components/contact-form/contact-form.scss
+++ b/src/components/contact-form/contact-form.scss
@@ -50,6 +50,7 @@
       max-width: 10rem;
       color: white;
       text-transform: uppercase;
+      background-color: $color-primary;
       background-image: linear-gradient(
         135deg,
         $color-primary,
